@@ -13,6 +13,7 @@ Description
 
 * Less boilerplate;
 * Logical structuring;
+* Basic code generator (.so function -> ctyped function);
 * Useful helpers.
 
 
