@@ -79,3 +79,35 @@ Quickstart
     thing.one(12)  # Call ``mylib_mylib_grouped_one``.
     thing.two(13)  # Call ``mylib_mylib_grouped_two``
 
+
+Sniffing
+========
+
+To save some time on function definition you can use ``ctyped`` automatic code generator.
+
+It won't give you fully functional code, but is able to lower typing chore.
+
+.. code-block:: python
+
+    from ctyped.sniffer import NmSymbolSniffer
+
+    # We sniff library first.
+    sniffer = NmSymbolSniffer('/here/is/my/libsome.so')
+    sniffed = sniffer.sniff()
+
+    # Now let's generate ctyped code.
+    dumped = sniffed.to_ctyped()
+
+    # At last we save autogenerated code into a file.
+    with open('library.py', 'w') as f:
+        f.write(dumped)
+
+
+There's also a shortcut to sniff an already defined library:
+
+.. code-block:: python
+
+    ...
+    sniffed = lib.sniff()
+    dumped = result.to_ctyped()
+
